--- a/404.html
+++ b/404.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <h1 style="font-size: 2rem; font-weight: bold; font-family: 'Times New Roman'">404 Not Found</h1>
-        <hr style="margin: 2rem;">
+        <hr style="margin: 0 1.5rem;">
     </body>
 </html>
