Add MongoDB to send and read messages dynamically

--- a/index.html
+++ b/index.html
@@ -1,88 +1,9 @@
 <h1 id="hello"></h1>
 
 <main>
-    <button class="dark-btn">Load more messages</button>
+    <button id="load-more-btn" class="dark-btn">Load more messages</button>
 
-    <div class="message-container">
-        <h2><em style="color: #75e3ff">Aqua</em><span>02/06/2023 14:28:07</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #41e742">Loki</em><span>02/06/2023 14:29:15</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #ffb522">Athena</em><span>02/06/2023 14:29:42</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #c992ff">Katara</em><span>02/06/2023 14:30:03</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #ffb522">Athena</em><span>02/06/2023 14:29:42</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-    
-    <div class="message-container">
-        <h2><em style="color: #c992ff">Katara</em><span>02/06/2023 14:30:03</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #75e3ff">Aqua</em><span>02/06/2023 14:28:07</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #41e742">Loki</em><span>02/06/2023 14:29:15</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
-
-    <div class="message-container">
-        <h2><em style="color: #41e742">Loki</em><span>02/06/2023 14:29:15</span></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Iure culpa rerum dolore nihil quod corporis tempora voluptatum incidunt vitae quos.
-            Nostrum perspiciatis eaque numquam ea cupiditate rerum ducimus, commodi reprehenderit?
-        </p>
-    </div>
+    <ul id="message-list"></ul>
 </main>
 
 <footer>
